log
ju., 17 de abr. de 2025 19:17:39: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:55:38: error: expected expression before 'size_t'
     HashMap* mapa = (HashMap*)malloc(size_t(HashMap));
                                      ^~~~~~
hashmap.c:57:5: error: expected ';' before 'return'
     return NULL;
     ^~~~~~
hashmap.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
eeef3b7
ju., 17 de abr. de 2025 19:17:53: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
943250f
ju., 17 de abr. de 2025 19:20:34: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
4134116
vi., 18 de abr. de 2025 22:53:53: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
e03fd72
vi., 18 de abr. de 2025 22:55:06: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|5
total_score: 10/70
fb24f3c
vi., 18 de abr. de 2025 22:55:40: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6d904eb
vi., 18 de abr. de 2025 23:17:36: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  4|4
total_score: 20/70
23ebcc2
vi., 18 de abr. de 2025 23:32:57: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:102:23: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
             return map->buckets;
                    ~~~^~~~~~~~~
hashmap.c:94:16: error: 'pos' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         size_t pos = pos % map->capacity;
                ^~~
cc1.exe: all warnings being treated as errors
e796dd0
vi., 18 de abr. de 2025 23:33:32: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:102:23: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
             return map->buckets;
                    ~~~^~~~~~~~~
hashmap.c:94:16: error: 'pos' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         size_t pos = pos % map->capacity;
                ^~~
cc1.exe: all warnings being treated as errors
e9c88a1
vi., 18 de abr. de 2025 23:33:49: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 20/70
185dcea
vi., 18 de abr. de 2025 23:35:33: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 30/70
57c0d26
